# hterm

./: .gitignore  Cargo.toml  Cross.toml  README.md  TASK.md  Taskfile.yml  config.json  openapi.yaml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-13-command-palette.md
docs/superpowers/specs/: 2026-06-13-command-palette-design.md
src/: config.rs  main.rs  mcp.rs  pty.rs  rest.rs  tools.rs  ws.rs
ui/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.js
ui/public/: manifest.json
ui/src/: App.svelte  CodeEditor.svelte  CommandPalette.svelte  FileManager.svelte  FilePane.svelte  FindBar.svelte  ShortcutInfo.svelte  TermTab.svelte  app.css  fileIcon.js  fileList.js  fuzzy.js  global.css  main.js
ui/src/assets/fonts/: jetbrains-mono-nerd.css
ui/src/autocomplete/: docker.js  gotemplate.js
