[package]
name = "hterm"
version = "0.1.0"
edition = "2021"
description = "Share your terminal over the web"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt", "macros", "net", "sync", "time", "io-util", "fs", "signal"] }
mimalloc = "0.1"
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["term", "process", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
rust-embed = { version = "8.11.0", features = ["mime-guess"] }
mime_guess = "2.0.5"

[profile.release]
opt-level = "z"     # optimize for size
lto = true          # link-time optimization
codegen-units = 1   # single codegen unit for max optimization
panic = "abort"     # smaller binary, no unwinding
strip = true        # strip debug symbols
