[package]
name        = "hterm"
version     = "0.1.0"
edition     = "2021"
description = "Share your terminal over the web"

[dependencies]
# axum-server provides real TLS via rustls — no OpenSSL dependency required.
axum        = { version = "0.8",  features = ["ws"] }
axum-server = { version = "0.7",  features = ["tls-rustls"] }
tokio       = { version = "1",    features = ["rt", "macros", "net", "sync", "time", "io-util", "fs", "signal"] }
bytes       = "1"                            # zero-copy slices; used directly in ws.rs
snmalloc-rs = "0.3"
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
clap        = { version = "4",    features = ["derive"] }
# "user" adds nix::unistd::{setuid, setgid, Uid, Gid} for privilege drop.
nix         = { version = "0.29", features = ["term", "process", "signal", "user"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures     = "0.3"
rust-embed  = { version = "8",    features = ["mime-guess"] }
mime_guess  = "2"

[profile.release]
opt-level     = "z"     # optimise for binary size
lto           = true    # link-time optimisation
codegen-units = 1       # single CGU — required for full LTO
panic         = "abort"
strip         = true